--- a/Create_anomalous_boat_data2.ipynb
+++ b/Create_anomalous_boat_data2.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from keras import Sequential\n",
@@ -35,12 +27,33 @@
     "\n",
     "boat_csv = read_data(\"Data/Boat_data.csv\")\n",
     "boat_csv = boat_csv.drop(columns=[\"Unnamed: 0\"])\n",
-    "#print(boat_csv)\n"
+    "#print(boat_csv)\n",
+    "\n",
+    "\n",
+    "for i in range(200):\n",
+    "    boat_csv.iloc[i+100][\"G_Lon\"] = boat_csv.iloc[i+100][\"G_Lon\"] - i*0.000001 \n",
+    "for i in range(100):\n",
+    "    boat_csv.iloc[i+200][\"G_Lon\"] = boat_csv.iloc[i+200][\"G_Lon\"] + i*0.000001*2 \n",
+    "    pass\n",
+    "\n",
+    "for i in range(200):\n",
+    "    boat_csv.iloc[i+400][\"G_Lon\"] = boat_csv.iloc[i+400][\"G_Lon\"] - i*0.000001 \n",
+    "for i in range(100):\n",
+    "    boat_csv.iloc[i+400][\"G_Lon\"] = boat_csv.iloc[i+400][\"G_Lon\"] + i*0.000001*2 \n",
+    "    pass\n",
+    "\n",
+    "plt.plot(np.array(boat_csv[\"G_Lon\"]),np.array(boat_csv[\"G_Lat\"]))\n",
+    "plt.show()\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "normal_data = scaler.fit_transform(boat_csv)\n",
+    "\n",
+    "normal_df = pd.DataFrame(normal_data, columns=boat_csv.columns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -54,19 +67,6 @@
     }
    ],
    "source": [
-    "\n",
-    "for i in range(400):\n",
-    "    boat_csv.iloc[i+100][\"G_Lon\"] = boat_csv.iloc[i+100][\"G_Lon\"] - i*0.000001 \n",
-    "for i in range(200):\n",
-    "    boat_csv.iloc[i+200][\"G_Lon\"] = boat_csv.iloc[i+200][\"G_Lon\"] + i*0.000001*2 \n",
-    "    pass\n",
-    "plt.plot(np.array(boat_csv[\"G_Lon\"]),np.array(boat_csv[\"G_Lat\"]))\n",
-    "plt.show()\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "normal_data = scaler.fit_transform(boat_csv)\n",
-    "\n",
-    "normal_df = pd.DataFrame(normal_data, columns=boat_csv.columns)\n",
     "\n",
     "plt.plot(normal_df[\"G_Lon\"], normal_df[\"G_Lat\"])\n",
     "plt.show()\n",
