--- a/LSTM-AE_noteBook.ipynb
+++ b/LSTM-AE_noteBook.ipynb
@@ -680,6 +680,7 @@
     }
    ],
    "source": [
+    "\n",
     "anomalous_sequences = []\n",
     "reconstr_error_nominal_sequences, reconstr_error_anomalous_sequences = [], []\n",
     "MUs, SIGMAs = [], []\n",
@@ -700,7 +701,7 @@
     "\n",
     "print(len(reconstr_error_nominal_sequences), len(reconstr_error_nominal_sequences[0]))\n",
     "print(len(MUs), MUs[0])\n",
-    "print(\"Done\") \n"
+    "print(\"Done\") "
    ]
   },
   {
@@ -787,8 +788,8 @@
     "            resultList.append(list[y-1])\n",
     "    return resultList, outlierList\n",
     "\n",
-    "#nominal_without_outliers, outlier_list = detectOutliers(anomaly_scores_nominal,\n",
-    " #                                                       outlierConstant=20)\n",
+    "nominal_without_outliers, outlier_list = detectOutliers(anomaly_scores_nominal,\n",
+    "                                                        outlierConstant=20)\n",
     "\n",
     "anomalous_without_outliers, outliers_anomalous_list = detectOutliers(encoded_difference,\n",
     "                                                       outlierConstant=20)\n",
@@ -809,14 +810,14 @@
     "boat_csv = read_data(\"Data/Boat_data.csv\")\n",
     "boat_csv = boat_csv.drop(columns=[\"Unnamed: 0\"])\n",
     "\n",
-    "# plt.plot(boat_csv[\"G_Lon\"], boat_csv[\"G_Lat\"])\n",
-    "# plt.title(\"Nominal anoamalies points LSTM_AE\")\n",
-    "# for i in outlier_list:\n",
-    "#     anomaly_position = i[0]*interval \n",
-    "#     plt.plot(boat_csv[\"G_Lon\"][anomaly_position:anomaly_position+window],\n",
-    "#              boat_csv[\"G_Lat\"][anomaly_position:anomaly_position+window], 'bo')\n",
-    "#     \n",
-    "# plt.show()\n",
+    "plt.plot(boat_csv[\"G_Lon\"], boat_csv[\"G_Lat\"])\n",
+    "plt.title(\"Nominal anoamalies points LSTM_AE\")\n",
+    "for i in outlier_list:\n",
+    "    anomaly_position = i[0]*interval \n",
+    "    plt.plot(boat_csv[\"G_Lon\"][anomaly_position:anomaly_position+window],\n",
+    "             boat_csv[\"G_Lat\"][anomaly_position:anomaly_position+window], 'bo')\n",
+    "\n",
+    "plt.show()\n",
     "\n",
     "\n",
     "an_csv = read_data(\"Data/Boat_data_curved.csv\")\n",
