--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,14 +223,10 @@
     "    acc = np.random.normal(m, s-0.2, 5739)\n",
     "    \n",
     "    m0c = np.random.normal(0, 0.5, 5739)\n",
-    "    for i in range(5):\n",
-    "        m0c[470+(i*958)] = 10\n",
-    "        m0c[958+(i*958)] = -10\n",
+    "\n",
     "        \n",
     "    m1c = np.random.normal(0, 0.5, 5739)\n",
-    "    for i in range(5):\n",
-    "        m1c[470+(i*958)] = -10\n",
-    "        m1c[958+(i*958)] = 10\n",
+    "\n",
     "    \n",
     "    lats = [45.3596665575, 45.36225589, 45.36226747, 45.35967972, 45.35969351, 45.36227073,\n",
     "            45.36228557, 45.35970006, 45.35971575, 45.36230304, 45.36230583,\n",
@@ -323,15 +319,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Speed     Degrees  Acceleration       M0C       M1C        Lat  \\\n0    0.158719  247.400547      0.292032  0.329947  0.798176  45.359669   \n1    0.619293  239.210401     -0.095461 -0.331141 -0.243756  45.359728   \n2    0.528004  245.081345     -0.712099  0.416466 -0.289641  45.359777   \n3    0.087770  248.912407      0.224972  0.588748  0.269185  45.359839   \n4    0.018816  258.844019     -0.306179  0.415118 -0.500653  45.359885   \n..        ...         ...           ...       ...       ...        ...   \n658 -0.172513   62.134452     -1.027362 -0.497500  0.338011  45.360040   \n659 -0.424455   71.479917     -1.127762  0.743201 -0.542213  45.359988   \n660 -0.714658   72.153526      0.523181  0.163548 -0.487633  45.359939   \n661 -0.313288   62.744291      1.507632 -0.455706 -0.355707  45.359892   \n662 -1.269745   71.102906      0.560820  0.806443 -1.018015  45.359826   \n\n           Lon  \n0    11.020599  \n1    11.020582  \n2    11.020564  \n3    11.020546  \n4    11.020531  \n..         ...  \n658  11.021223  \n659  11.021242  \n660  11.021256  \n661  11.021273  \n662  11.021284  \n\n[6630 rows x 7 columns]\n"
-     ]
+     "ename": "NameError",
+     "evalue": "name 'create_data_short' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-ef759872442f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_data_short\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcreate_data_short\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'create_data_short' is not defined"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -344,20 +344,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Speed     Degrees  Acceleration       M0C       M1C        Lat  \\\n0     0.738173  244.478404      0.063183  0.218867  0.422658  45.359653   \n1     0.980916  248.603418      1.593304  0.810409 -0.727899  45.359650   \n2     0.545875  248.651179     -0.039776  0.516998 -0.074292  45.359673   \n3     0.276348  249.342188     -1.374821 -0.282498 -0.515297  45.359665   \n4     0.426903  242.778291     -1.509434  0.091109 -0.446648  45.359671   \n...        ...         ...           ...       ...       ...        ...   \n5734 -0.271179   76.937919     -0.015963  0.484713 -0.246359  45.359814   \n5735 -0.644856   70.073904     -0.942336 -0.503485  0.282672  45.359803   \n5736 -0.546904   74.677158      0.711185 -0.095586 -0.628990  45.359796   \n5737 -0.285898   62.595816      0.689930  0.541491 -0.578461  45.359794   \n5738 -0.245515   71.283675     -0.240949 -0.040303 -0.124602  45.359784   \n\n            Lon  \n0     11.020596  \n1     11.020595  \n2     11.020590  \n3     11.020594  \n4     11.020590  \n...         ...  \n5734  11.021301  \n5735  11.021301  \n5736  11.021303  \n5737  11.021305  \n5738  11.021304  \n\n[57390 rows x 7 columns]\n"
+      "         Speed     Degrees  Acceleration       M0C       M1C        Lat  \\\n0     0.252888  245.631688     -1.335609 -1.191920 -0.129304  45.359665   \n1     0.699133  244.039412      0.199949  0.324324 -0.182356  45.359676   \n2     0.440721  248.577589      0.065274 -0.405056 -0.592578  45.359672   \n3     0.149736  247.667356     -0.729609  1.129427 -0.003399  45.359680   \n4     0.245180  247.493050     -0.234328 -0.127677  0.119220  45.359685   \n...        ...         ...           ...       ...       ...        ...   \n5734 -0.910464   65.720985      0.513053  0.110668 -0.292294  45.359818   \n5735 -0.475662   68.588953      0.298636  1.008363 -0.162766  45.359810   \n5736 -0.007759   63.136543      0.280233  0.784412  0.096774  45.359808   \n5737 -1.042633   66.085572     -0.406768 -0.250638 -1.116286  45.359794   \n5738 -0.605650   67.693451     -0.495523  0.359056  0.341792  45.359791   \n\n            Lon  \n0     11.020598  \n1     11.020598  \n2     11.020597  \n3     11.020591  \n4     11.020592  \n...         ...  \n5734  11.021305  \n5735  11.021299  \n5736  11.021302  \n5737  11.021306  \n5738  11.021306  \n\n[120519 rows x 7 columns]\n"
      ]
     }
    ],
    "source": [
     "df = create_data()\n",
-    "for i in range(9):\n",
+    "for i in range(20):\n",
     "    df = df.append(create_data())\n",
     "        \n",
     "print(df)\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
