--- a/Create_anomalous_boat_data2.ipynb
+++ b/Create_anomalous_boat_data2.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -41,9 +48,9 @@
     "\n",
     "\n",
     "for i in range(200):\n",
-    "    boat_csv.iloc[i+100][\"Lon\"] = boat_csv.iloc[i+100][\"Lon\"] - i*0.000001 \n",
+    "    boat_csv.iloc[i+100][\"Lon\"] = boat_csv.iloc[i+100][\"Lon\"] - i*0.00001 \n",
     "for i in range(100):\n",
-    "    boat_csv.iloc[i+200][\"Lon\"] = boat_csv.iloc[i+200][\"Lon\"] + i*0.000001*2 \n",
+    "    boat_csv.iloc[i+200][\"Lon\"] = boat_csv.iloc[i+200][\"Lon\"] + i*0.00001*2 \n",
     "    pass\n",
     "\n",
     "\n",
@@ -59,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
