--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +159,7 @@
     "    df[\"M1C\"] = m1c\n",
     "    df[\"Lat\"] = g_lat\n",
     "    df[\"Lon\"] = g_lon\n",
+    "    df = df.drop(df.index[-7:])\n",
     "    \n",
     "    #df = df.drop(df.index[-39:])\n",
     "    \n",
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Speed     Degrees  Acceleration       M0C       M1C        Lat  \\\n0    0.336385  242.529484     -0.147079 -0.879387  1.619487  45.359667   \n1    0.224061  246.116562     -0.504704  0.045401  0.390336  45.359723   \n2    0.753355  246.945276      0.166849 -0.427586  0.490910  45.359777   \n3    0.496209  248.819488      0.426980 -0.103443 -0.127158  45.359833   \n4    0.633727  249.795098      0.659826  0.469236  0.251293  45.359885   \n..        ...         ...           ...       ...       ...        ...   \n658 -1.064138   60.078963     -0.416757 -0.322698  0.284040  45.360053   \n659 -0.997492   62.304234     -0.311134 -0.465716 -0.088997  45.359997   \n660 -0.325536   74.953050      0.706874  0.100140  0.256000  45.359936   \n661 -0.416718   72.650364      0.399351  0.156166 -0.660562  45.359877   \n662 -0.550037   69.243943     -1.426419  0.208813  0.996098  45.359836   \n\n           Lon  \n0    11.020594  \n1    11.020575  \n2    11.020558  \n3    11.020543  \n4    11.020525  \n..         ...  \n658  11.021227  \n659  11.021245  \n660  11.021260  \n661  11.021277  \n662  11.021289  \n\n[66963 rows x 7 columns]\n"
+      "        Speed     Degrees  Acceleration       M0C       M1C        Lat  \\\n0   -0.021510  245.157154     -1.141002  0.146099 -0.231466  45.359666   \n1    0.016248  255.524822      0.907531  0.191830 -0.231660  45.359730   \n2    0.656278  242.875030      0.944048  0.000360  0.493515  45.359773   \n3    0.406391  243.240827     -0.327342 -0.207423 -0.007125  45.359832   \n4    0.142932  248.018448      0.128261 -0.114287  0.201000  45.359896   \n..        ...         ...           ...       ...       ...        ...   \n651 -0.713938   77.330640     -0.355318  0.155042 -0.234338  45.360435   \n652 -0.898891   73.064320      0.418715 -0.073668  0.384777  45.360385   \n653 -0.372837   66.468546      0.801356  0.014775 -0.952874  45.360331   \n654 -0.546368   73.157863     -0.139493 -0.426220  0.289987  45.360277   \n655 -0.815574   65.013073      0.780092  0.246598  0.655763  45.360222   \n\n           Lon  \n0    11.020601  \n1    11.020580  \n2    11.020568  \n3    11.020551  \n4    11.020531  \n..         ...  \n651  11.021113  \n652  11.021130  \n653  11.021148  \n654  11.021161  \n655  11.021177  \n\n[66256 rows x 7 columns]\n"
      ]
     }
    ],
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
