--- a/Conv_Ae.ipynb
+++ b/Conv_Ae.ipynb
@@ -224,7 +224,7 @@
    "source": [
     "weight_modifiers = np.ones((latent_dim,))\n",
     "\n",
-    "nom_enc =(enc.predict(trainX_nominal))\n",
+    "nom_enc =(encoder.predict(trainX_nominal))\n",
     "print(nom_enc.shape)\n",
     "\n",
     "nom_enc = nom_enc.reshape(100,latent_dim)\n",
