--- a/Create_anomalous_boat_data.ipynb
+++ b/Create_anomalous_boat_data.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6620, 7)\n"
+      "Index(['speed', 'm0_current', 'm1_current', 'acceleration', 'latitude',\n       'longitude', 'degrees'],\n      dtype='object')\n(6620, 7)\n"
      ]
     }
    ],
@@ -32,18 +25,24 @@
     "import keras as kr\n",
     "import keras.losses as losses\n",
     " \n",
-    "\n",
+    "columns = ['Speed','m0c','m1c','acc','lat','lon','deg']\n",
     "\n",
     "boat_curved = pd.read_csv(\"Data/Anomalous_boat_data.csv\")\n",
     "boat_curved= boat_curved.drop(columns=[\"Unnamed: 0\", \"heading\"])    \n",
+    "print(boat_curved.columns)\n",
     "scaler = StandardScaler()\n",
     "anomalous_data = scaler.fit_transform(boat_curved)\n",
+    "anomalous_df = pd.DataFrame(anomalous_data, columns = columns)\n",
     "print(anomalous_data.shape)\n",
     "\n",
     "\n",
+    "for i in range(7):\n",
+    "    plt.plot(anomalous_df[columns[i]])\n",
+    "    plt.title(columns[i])\n",
+    "    plt.show()\n",
     "\n",
-    "\n",
-    "\n"
+    "plt.plot(anomalous_df['lon'], anomalous_df['lat'])\n",
+    "plt.show()\n"
    ]
   },
   {
