--- a/Create_anomalous_boat_data.ipynb
+++ b/Create_anomalous_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -35,14 +35,35 @@
     "anomalous_df = pd.DataFrame(anomalous_data, columns = columns)\n",
     "print(anomalous_data.shape)\n",
     "\n",
-    "\n",
-    "for i in range(7):\n",
-    "    plt.plot(anomalous_df[columns[i]])\n",
-    "    plt.title(columns[i])\n",
+    "def plot_df(df, title):\n",
+    "    for i in range(7):\n",
+    "        plt.plot(df[columns[i]][:-6])\n",
+    "        plt.title(columns[i] + \" \" +title)\n",
+    "        plt.show()\n",
+    "        pass\n",
+    "    plt.plot(df['lon'], df['lat'])\n",
+    "    plt.title(title)\n",
     "    plt.show()\n",
     "\n",
-    "plt.plot(anomalous_df['lon'], anomalous_df['lat'])\n",
-    "plt.show()\n"
+    "def add_noise(st_devs):\n",
+    "    data = np.ones(shape=(6620,7))\n",
+    "    for i in range(6620):\n",
+    "        for j, value in enumerate(columns):\n",
+    "            v = anomalous_data[i][j]\n",
+    "            noise = np.random.normal(v, st_devs[j])\n",
+    "            data[i][j] = v + noise\n",
+    "    return data\n",
+    "\n",
+    "devs = [0.5,1,1,2,0.01,0.01,0.15]\n",
+    "noisy_data = add_noise(devs)\n",
+    "noisy_df = pd.DataFrame(noisy_data, columns=columns)\n",
+    "plot_df(anomalous_df, 'anomalous')\n",
+    "plot_df(noisy_df, 'noisy')    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
