Conv_anomalous_compressor

--- a/Create_anomalous_boat_data.ipynb
+++ b/Create_anomalous_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -11,65 +11,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['speed', 'm0_current', 'm1_current', 'acceleration', 'latitude',\n       'longitude', 'degrees'],\n      dtype='object')\n(6620, 7)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         Speed       m0c       m1c       acc       lat       lon       deg\n0     4.422086 -0.777963 -0.678748  2.412782 -3.556580  0.840828 -3.275324\n1     5.100250 -0.739293  1.598850  4.942267 -3.498659  0.847674  2.321059\n2     5.440515 -1.962318  2.127814 -1.992835 -3.457567  0.811720  2.212916\n3     5.895900  2.661937 -3.249239  0.174993 -3.470486  0.736793  2.383736\n4     4.428923  1.469924 -3.327613 -1.802005 -3.463527  0.787805  2.138177\n...        ...       ...       ...       ...       ...       ...       ...\n6615 -3.269739  0.314175 -1.557380  2.590115 -3.154799  4.693612 -0.736155\n6616 -2.278835 -0.996850  1.518185  4.058405 -3.108980  4.693370 -1.215463\n6617 -1.824440  0.491250 -1.157634  2.024631 -3.125875  4.734821 -1.115648\n6618 -0.322671 -1.482926  1.142134 -4.097147 -3.123130  4.754099 -1.111658\n6619 -2.328655  1.117518  0.421204  0.111786 -3.173295  4.790304 -1.184861\n\n[72820 rows x 7 columns]\n"
+      "         Speed       m0c       m1c       acc       lat       lon       sin  \\\n0     5.621329  0.289131 -0.312179 -2.135119 -3.548943  0.897262 -0.928684   \n1     5.138855 -0.821228  1.500425  2.775360 -3.483321  0.875290 -0.915923   \n2     6.231602 -1.660474  2.293065 -3.078832 -3.475313  0.763078 -0.924624   \n3     4.697377  1.195294 -1.928085 -1.876235 -3.434160  0.765237 -0.919457   \n4     4.905521  2.426659 -1.390575  3.904188 -3.454338  0.816576 -0.924536   \n...        ...       ...       ...       ...       ...       ...       ...   \n6595 -1.529504 -0.027810 -0.889648 -0.438932 -2.976241  4.414905  0.987395   \n6596 -0.472938 -0.501245  1.534650  0.101797 -2.975422  4.426089  0.977915   \n6597  0.276292  1.965984 -2.097410 -2.520142 -3.022935  4.434338  0.987892   \n6598 -1.561877  1.110594 -0.095172 -4.424351 -2.954052  4.495397  0.999431   \n6599 -1.726300 -1.457063 -1.140267 -0.872076 -3.001786  4.454672  0.985104   \n\n           cos  \n0    -0.370873  \n1    -0.401355  \n2    -0.380882  \n3    -0.393191  \n4    -0.381094  \n...        ...  \n6595 -0.158276  \n6596 -0.209003  \n6597 -0.155144  \n6598  0.033726  \n6599  0.171960  \n\n[72600 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
+    "import math\n",
+    "\n",
     "from keras.layers import *\n",
-    "from keras import Model\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import matplotlib.pyplot as plt\n",
-    "from keras import Sequential\n",
-    "import keras as kr\n",
-    "import keras.losses as losses\n",
     " \n",
-    "columns = ['Speed','m0c','m1c','acc','lat','lon','deg']\n",
+    "columns = ['Speed','m0c','m1c','acc','lat','lon']\n",
     "\n",
     "boat_curved = pd.read_csv(\"Data/Anomalous_boat_data.csv\")\n",
     "boat_curved= boat_curved.drop(columns=[\"Unnamed: 0\", \"heading\"])    \n",
-    "print(boat_curved.columns)\n",
+    "boat_curved['degrees'][0] = 250\n",
+    "boat_curved= boat_curved[:6600]\n",
     "scaler = StandardScaler()\n",
-    "anomalous_data = scaler.fit_transform(boat_curved)\n",
-    "anomalous_df = pd.DataFrame(anomalous_data, columns = columns)\n",
-    "print(anomalous_data.shape)\n",
-    "\n",
-    "def plot_df(df, title):\n",
-    "    for i in range(7-2):\n",
-    "        plt.plot(df[columns[i]])\n",
-    "        plt.title(columns[i] + \" \" +title)\n",
-    "        plt.show()\n",
-    "        pass\n",
-    "    # plt.plot(df['lon'], df['lat'])\n",
-    "    # plt.title(title)\n",
-    "    # plt.show()\n",
+    "anomalous_data = scaler.fit_transform(boat_curved.drop(columns=['degrees']))\n",
+    "anomalous_df = pd.DataFrame(anomalous_data, columns=columns)\n",
     "\n",
     "def add_noise(st_devs):\n",
-    "    data = np.ones(shape=(6620,7))\n",
-    "    for i in range(6620):\n",
+    "    data = np.ones(shape=(6600,6))\n",
+    "    for i in range(6600):\n",
     "        for j, value in enumerate(columns):\n",
     "            v = anomalous_data[i][j]\n",
     "            noise = np.random.normal(v, st_devs[j])\n",
     "            data[i][j] = v + noise\n",
     "    return data\n",
     "\n",
-    "devs = [0.5,1,1,2,0.03,0.03,0.15]\n",
-    "noisy_data = add_noise(devs)\n",
-    "noisy_df = pd.DataFrame(noisy_data, columns=columns)\n",
+    "columns_new = ['Speed', 'm0c', 'm1c', 'acc', 'lat', 'lon', 'sin', 'cos']\n",
     "\n",
+    "devs = [0.5, 1, 1, 2, 0.03, 0.03]\n",
+    "noisy_data = add_noise(devs)\n",
+    "zeros = np.zeros(shape=(6600,8))\n",
+    "zeros[:noisy_data.shape[0], :noisy_data.shape[1]] = noisy_data\n",
+    "noisy_data = zeros\n",
+    "noisy_df = pd.DataFrame(noisy_data, columns=columns_new)\n",
+    "\n",
+    "\n",
+    "\n",
+    "id_list = []\n",
+    "def sin_cos():\n",
+    "    sins = []\n",
+    "    cosins = []\n",
+    "    for i, degree in enumerate(boat_curved[\"degrees\"]):\n",
+    "        value = degree + np.random.normal(0, 2)\n",
+    "        sin = np.sin(np.deg2rad(value))\n",
+    "        cos = np.cos(np.deg2rad(value))\n",
+    "        id_list.append(sin**2+cos**2)\n",
+    "        sins.append(sin)\n",
+    "        cosins.append(cos)\n",
+    "    return sins, cosins    \n",
+    "\n",
+    "sin,cos = sin_cos()\n",
+    "noisy_df['sin'] = sin\n",
+    "noisy_df['cos'] = cos\n",
     "\n",
     "lenght = 10\n",
     "for i in range(lenght):\n",
-    "    noisy_df = noisy_df.append(pd.DataFrame(add_noise(devs), columns=columns)) \n",
-    "    plot_df(noisy_df[-6620:],'ciao')\n",
+    "    new_data = pd.DataFrame(add_noise(devs), columns=columns)\n",
+    "    sin, cos = sin_cos()\n",
+    "    new_data['sin'] = sin\n",
+    "    new_data['cos'] = cos\n",
+    "    noisy_df = noisy_df.append(new_data) \n",
+    "# \n",
+    "# plt.plot(noisy_df['sin'][6620:13240])\n",
+    "# plt.plot(noisy_df['cos'][6620:13240])\n",
+    "# plt.title(\"Sins-Cosins\")\n",
+    "# plt.show()\n",
+    "# \n",
+    "# plt.plot(id_list)\n",
+    "# plt.title(\"IDLIST\")\n",
+    "# plt.show()\n",
+    "# \n",
+    "# plt.plot(boat_curved['degrees'][:6620])\n",
+    "# plt.title(\"DEGREES\")\n",
+    "# plt.show()\n",
+    "\n",
     "\n",
     "print(noisy_df)\n",
     "\n"
@@ -77,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
