--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,15 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def create_data_short():\n",
+    "    \n",
     "    def headingFromCoordinates(lat1, lon1, lat2, lon2): \n",
     "        if(lon2-lon1 < 0): #2nd and 3rd quadrant \n",
-    "            return 180 - degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2))))\n",
-    "        if(lat2-lat1 < 0): #4th quadrant\n",
-    "            return 360 + degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2))))\n",
-    "        return degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2)))) #1st quadrant\n",
-    "    \n",
+    "            heading =180 - degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2)))) \n",
+    "        elif(lat2-lat1 < 0): #4th quadrant\n",
+    "            heading = 360 + degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2))))\n",
+    "        else:\n",
+    "            heading = degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2)))) #1st quadrant            \n",
+    "        return heading\n",
     "    df = pd.read_csv('Data/Raw_boat_data')\n",
     "    df = df[210:6830]\n",
     "    \n",
@@ -145,15 +147,31 @@
     "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha)))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha)))))\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    columns = [\"Speed\", \"Degrees\", \n",
+    "    sins = []\n",
+    "    cosins = []\n",
+    "    id_list = []\n",
+    "    for i, degree in enumerate(dgr):\n",
+    "        sins.append(np.sin(np.deg2rad(degree)))\n",
+    "        cosins.append(np.cos(np.deg2rad(degree)))\n",
+    "        \n",
+    "        \n",
+    "    columns = [\"Speed\", \"Sin\", \"Cosin\", \n",
     "               \"Acceleration\", \"M0C\", \n",
     "               \"M1C\", \"Lat\", \"Lon\"]\n",
     "    \n",
+    "    # print(len(sins), len(cosins))\n",
+    "    # plt.plot(sins)\n",
+    "    # plt.plot(cosins)\n",
+    "    # plt.show()\n",
+    "    # \n",
+    "    print(len(dgr))\n",
+    "    plt.plot(dgr)\n",
+    "    plt.show()\n",
+    "    \n",
     "    df = pd.DataFrame(columns=columns)\n",
     "    df[\"Speed\"] = spd\n",
-    "    df[\"Degrees\"] = dgr\n",
+    "    df[\"Sin\"] = sins\n",
+    "    df[\"Cosin\"] = cosins\n",
     "    df[\"Acceleration\"] = acc\n",
     "    df[\"M0C\"] = m0c\n",
     "    df[\"M1C\"] = m1c\n",
@@ -302,6 +320,7 @@
     "               \"Acceleration\", \"M0C\", \n",
     "               \"M1C\", \"Lat\", \"Lon\"]\n",
     "    \n",
+    " \n",
     "    df = pd.DataFrame(columns=columns)\n",
     "    df[\"Speed\"] = spd\n",
     "    df[\"Degrees\"] = dgr\n",
@@ -320,19 +339,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Speed     Degrees  Acceleration       M0C       M1C        Lat  \\\n0   -0.021510  245.157154     -1.141002  0.146099 -0.231466  45.359666   \n1    0.016248  255.524822      0.907531  0.191830 -0.231660  45.359730   \n2    0.656278  242.875030      0.944048  0.000360  0.493515  45.359773   \n3    0.406391  243.240827     -0.327342 -0.207423 -0.007125  45.359832   \n4    0.142932  248.018448      0.128261 -0.114287  0.201000  45.359896   \n..        ...         ...           ...       ...       ...        ...   \n651 -0.713938   77.330640     -0.355318  0.155042 -0.234338  45.360435   \n652 -0.898891   73.064320      0.418715 -0.073668  0.384777  45.360385   \n653 -0.372837   66.468546      0.801356  0.014775 -0.952874  45.360331   \n654 -0.546368   73.157863     -0.139493 -0.426220  0.289987  45.360277   \n655 -0.815574   65.013073      0.780092  0.246598  0.655763  45.360222   \n\n           Lon  \n0    11.020601  \n1    11.020580  \n2    11.020568  \n3    11.020551  \n4    11.020531  \n..         ...  \n651  11.021113  \n652  11.021130  \n653  11.021148  \n654  11.021161  \n655  11.021177  \n\n[66256 rows x 7 columns]\n"
+      "663\n663\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Speed       Sin     Cosin  Acceleration       M0C       M1C  \\\n0    0.562347 -0.953721 -0.300692     -0.402994 -0.434089  1.541512   \n1    0.207177 -0.835183 -0.549973     -1.071442  0.061426  0.429718   \n2    0.722525 -0.918397 -0.395660      0.890368  1.174815  0.102608   \n3    0.630311 -0.942976 -0.332861     -0.446787 -0.120837  0.344915   \n4    0.687814 -0.847334 -0.531061      0.972372  0.923506  0.475968   \n..        ...       ...       ...           ...       ...       ...   \n651 -0.630819  0.954477  0.298284      0.182359 -0.095564 -0.421312   \n652 -0.516871  0.914531  0.404515      1.220277  0.276551 -0.063628   \n653 -0.632480  0.942287  0.334806      0.825813 -0.239003  0.524423   \n654 -0.525899  0.923605  0.383346      0.511892  0.492500  0.397722   \n655 -0.806527  0.909393  0.415938      0.854781 -0.116333  0.438850   \n\n           Lat        Lon  \n0    45.359670  11.020598  \n1    45.359730  11.020580  \n2    45.359781  11.020562  \n3    45.359838  11.020545  \n4    45.359890  11.020532  \n..         ...        ...  \n651  45.360442  11.021112  \n652  45.360385  11.021130  \n653  45.360334  11.021150  \n654  45.360261  11.021158  \n655  45.360222  11.021174  \n\n[1312 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
-    "df = pd.DataFrame(create_data_short())\n",
+    "df = create_data_short()\n",
     "for i in range(100):\n",
     "    data = create_data_short()\n",
     "    # choice = np.random.choice(3, 1)\n",
@@ -370,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
